<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".SignIn_Screen">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="479dp"
        android:text="@string/CatQuiz"
        android:textAlignment="center"
        android:textColor="@color/Shape"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/shape_main"
        android:padding="12dp"
        android:hint="@string/email"
        android:textColor="@color/Shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_main"
        android:padding="12dp"
        android:hint="@string/Пароль"
        android:textColor="@color/Shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:text="@string/Welcome"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:onClick="welcom" />


</androidx.constraintlayout.widget.ConstraintLayout>