<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="42dp">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="@dimen/quest_size"
            android:textColor="@color/black"
            android:textAlignment="center"
            tools:text="@string/qest1" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">


            <Button
                android:id="@+id/true_button"
                android:layout_width="117dp"
                android:layout_height="62dp"
                android:text="@string/true0"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:background="@drawable/shape"
                tools:ignore="MissingConstraints"
                android:onClick="true_Ivent"/>

            <Button
                android:id="@+id/false_button"
                android:layout_width="114dp"
                android:layout_height="62dp"
                android:text="@string/false0"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:background="@drawable/shape"
                tools:ignore="MissingConstraints"
                android:onClick="false_Ivent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginRight="19dp"
                android:background="@drawable/arrow_left"
                android:onClick="back_Ivent"/>
            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginLeft="19dp"
                android:background="@drawable/arrow_right"
                android:onClick="next_Ivent"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>